--- a/ArisaTwitchBot/ArisaTwitchBot.csproj
+++ b/ArisaTwitchBot/ArisaTwitchBot.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="SharpCollections" Version="0.1.1" />
     <PackageReference Include="TwitchLib" Version="3.0.1" />
   </ItemGroup>
 
